--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,9 @@ body {
   font-size: 16px;
   /* Base font size for better scaling */
 }
+html{
+  overflow-x: hidden;
+}
 
 body::before {
   --line: hsl(0 0% 95% / 0.25);
